Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8253079

DeterministicDump.java fails due to garbage in structure padding

XMLWordPrintable

    • b17

      [2020-09-13T23:29:13.086022Z] Waiting for completion for process 33700
      [2020-09-13T23:29:13.086094Z] Waiting for completion finished for process 33700
      Command line: [/Users/fool/workspace/git/github/DamonFool/jdk/build/macosx-x86_64-server-release/images/jdk/bin/java -cp /Users/fool/workspace/git/github/DamonFool/jdk/build/macosx-x86_64-server-release/test-support/jtreg_test_hotspot_jtreg_runtime_cds_DeterministicDump_java/classes/0/runtime/cds/DeterministicDump.d:/Users/fool/workspace/git/github/DamonFool/jdk/test/hotspot/jtreg/runtime/cds:/Users/fool/workspace/git/github/DamonFool/jdk/build/macosx-x86_64-server-release/test-support/jtreg_test_hotspot_jtreg_runtime_cds_DeterministicDump_java/classes/0/test/lib:/Users/fool/workspace/open/jtreg/lib/javatest.jar:/Users/fool/workspace/open/jtreg/lib/jtreg.jar:/Users/fool/workspace/open/jtreg/lib/junit.jar:/Users/fool/workspace/open/jtreg/lib/testng.jar:/Users/fool/workspace/open/jtreg/lib/jcommander.jar -Xmx128M -XX:+UseCompressedOops -XX:+UseCompressedClassPointers -XX:SharedArchiveFile=SharedArchiveFile4.jsa -Xshare:dump -Xlog:cds=debug ]
      [2020-09-13T23:29:13.088680Z] Gathering output for process 33701
      [ELAPSED: 428 ms]
      [logging stdout to /Users/fool/workspace/git/github/DamonFool/jdk/build/macosx-x86_64-server-release/test-support/jtreg_test_hotspot_jtreg_runtime_cds_DeterministicDump_java/scratch/0/runtime.cds.DeterministicDump.java-0004-SharedArchiveFile4.stdout]
      [logging stderr to /Users/fool/workspace/git/github/DamonFool/jdk/build/macosx-x86_64-server-release/test-support/jtreg_test_hotspot_jtreg_runtime_cds_DeterministicDump_java/scratch/0/runtime.cds.DeterministicDump.java-0004-SharedArchiveFile4.stderr]
      [STDERR]

      [2020-09-13T23:29:13.514175Z] Waiting for completion for process 33701
      [2020-09-13T23:29:13.514368Z] Waiting for completion finished for process 33701
      STDERR:
      java.lang.RuntimeException: File content different at byte #4, b0 = 115, b1 = 120
              at DeterministicDump.compare(DeterministicDump.java:117)
              at DeterministicDump.doTest(DeterministicDump.java:68)
              at DeterministicDump.main(DeterministicDump.java:47)
              at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
              at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
              at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
              at java.base/java.lang.reflect.Method.invoke(Method.java:564)
              at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
              at java.base/java.lang.Thread.run(Thread.java:832)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down tes

            iklam Ioi Lam
            jiefu Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: