8253079: runtime/cds/DeterministicDump.java fails due to garbage in structure padding